# AI-Crypto-Trading-Bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: architecture-critic.md  code-critic.md  code-executor.md  data-pipeline-engineer.md  database-architect.md  devops-infrastructure-specialist.md  nextjs-frontend-specialist.md  python-backend-specialist.md  quant-strategy-analyst.md  risk-management-expert.md  security-audit-specialist.md  synthesis-arbiter.md  testing-quality-specialist.md  trading-engine-architect.md
.claude/commands/: astraeus.md  resynthesis.md
.claude/template/: report.md
.claude/workflows/: explore-plan-code.yaml  feature-implementation.yaml  performance-optimization.yaml  review-and-fix.yaml  security-audit.yaml  tdd-workflow.yaml
.github/workflows/: ci.yml
Documentation/: CLAUDE.md  KickOff.md
apps/: CLAUDE.md
apps/api/: CLAUDE.md  auth.py  config.py  main.py  prometheus.py  pyproject.toml  rate_limit.py  schemas.py
apps/api/db/: __init__.py  models.py  session.py
apps/api/routers/: __init__.py  circuit_breaker.py  learning.py  ml.py  optimize.py  orders.py  portfolio.py  runs.py  signals.py  strategies.py
apps/api/services/: __init__.py  retraining.py
apps/ui/: CLAUDE.md  jest.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json
apps/ui/src/__tests__/components/: data-table.test.tsx  stat-card.test.tsx  status-badge.test.tsx  (+1 more)
apps/ui/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
apps/ui/src/components/: error-boundary.tsx  theme-provider.tsx
apps/ui/src/lib/: api.ts  csv-export.ts  types.ts
docs/: CLAUDE.md  architecture.md  gebruikershandleiding.md  risk-model.md  strategy-guide.md
infra/: CLAUDE.md  Dockerfile.api  Dockerfile.ui  docker-compose.yml  docker-entrypoint.sh  prometheus.yml
infra/alembic/: alembic.ini  env.py  script.mako
infra/alembic/versions/: 001_initial_schema.py  002_add_position_snapshots.py  003_add_model_versions.py  004_add_recovered_from_run_id.py  005_add_optimization_runs.py  006_add_trade_journal_fields.py  007_add_archived_run_status.py
infra/grafana/dashboards/: trading-bot.json
infra/grafana/provisioning/dashboards/: dashboards.yml
scripts/: db_maintenance.sh  install_maintenance_cron.sh  train_model.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_auth.py  test_events.py  test_health_metrics.py  test_optimize_endpoint.py  test_orders_endpoints.py  test_portfolio_endpoints.py  test_rate_limit.py  test_runs_endpoints.py  test_strategies.py
tests/unit/: test_adaptive_learning.py  test_adaptive_optimizer.py  test_backtest.py  test_ccxt_market_data.py  test_dca_rsi_hybrid.py  test_execution.py  test_graduated_circuit_breaker.py  test_grid_trading.py  test_incremental_flush.py  test_indicators.py  test_live_engine_wiring.py  test_live_execution.py  test_macro_data.py  test_market_signals.py  test_metrics.py  test_ml_features.py  test_ml_training.py  test_model_strategy.py  test_models.py  test_multi_timeframe.py  test_order_fill_persistence.py  test_paper_engine_persistence.py  test_paper_execution.py  test_parameter_optimizer.py  test_performance_analyzer.py  test_portfolio.py  test_position_persistence.py  test_reporting.py  test_risk.py  test_rsi_fgi_boost.py  test_safety.py  test_sentiment.py  test_sprint23_retraining.py  test_sprint24_run_recovery.py  test_strategies.py  test_strategy_engine.py  test_strategy_engine_bar_loop.py  test_trade_journal.py  test_trade_recording.py  test_trailing_stop.py  (+1 more)
(+27 files in other folders)
