[project]
name = "ai-crypto-trading-bot"
version = "0.1.0"
description = "Production-grade AI Crypto Trading Bot with FastAPI, SQLAlchemy, and CCXT"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Crypto Trading Bot Team" }]

# Root workspace package has no runtime dependencies of its own;
# actual deps live in each workspace member's pyproject.toml.
dependencies = []

[tool.uv.workspace]
members = ["apps/api", "packages/trading", "packages/data", "packages/common"]

# ---------------------------------------------------------------------------
# Development tools — installed into the workspace virtualenv
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis>=4.6",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "packages"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert — acceptable in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "packages"]

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "alembic/"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "pandas.*", "numpy.*", "sklearn.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps/api/tests", "packages"]
addopts = "--cov=apps --cov=packages --cov-report=term-missing --cov-report=xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
markers = [
    "integration: marks tests as integration tests (require DB/Redis services)",
]

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__init__.py", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
