[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend server for AI Crypto Trading Bot"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.31",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "httpx>=0.27",
    "redis>=5.1",
    # Workspace siblings
    "common",
    "trading",
    "data",
]

[tool.uv.sources]
common   = { workspace = true }
trading  = { workspace = true }
data     = { workspace = true }
